# MinecraftClone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: basic.fs  basic.vs  default.frag  default.vert
src/: Camera.cpp  Camera.h  Input.cpp  Input.h  Window.cpp  Window.h  cube.cpp  cube.h  defer.h  main.cpp  precompiledheader.cpp  precompiledheader.h
src/EventSystem/: EventSystem.cpp  EventSystem.h  GlobalEventSystem.h
src/Renderer/: IndexBuffer.cpp  IndexBuffer.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TextureRectangle.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Utils/: ReadFile.cpp  ReadFile.h
src/renderer/: ShaderProgram.h  mesh.h  model.h  primitives.h  renderer.h
src/window/: window.h
